# loggservice

./: .env.example  .env.production.example  .gitignore  ARCHIVE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  TODO.md  docker-compose.demo.yml  docker-compose.postgres.yml  docker-compose.yml  package-lock.json  package.json  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg
backend/: .dockerignore  Dockerfile  eslint.config.js  jest.config.js  package-lock.json  package.json
docs/: pivot-audit-trail.md  retention.md
docs-site/: index.md  package-lock.json  package.json
sdk-java/: README.md  pom.xml
sdk-nodejs/: README.md  package.json
sdk-python/: README.md  pyproject.toml
sdk-python/src/clomp/: __init__.py
sdk-python/test/: test_sdk.py
sdk-typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml
todo/: P1-01-remove-hardcoded-api-key.md  P1-02-fix-admin-auth.md  P1-03-add-helmet-body-limit.md  P1-04-secure-docker-compose.md  P2-01-update-github-actions.md  P2-02-add-security-scanning.md  P2-03-add-eslint-config.md  P2-04-fix-eslint-ci.md  P3-01-increase-test-coverage.md  P3-02-add-webui-tests.md  P3-03-add-precommit-hooks.md  P3-04-secure-nginx.md  P3-05-improve-dockerfiles.md  P3-06-add-structured-logging.md  P4-01-create-security-md.md  P4-02-create-contributing-md.md  P4-03-create-pr-template.md  README.md  complete.sh
web-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js
(+139 files in other folders)
