[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clomp-sdk"
version = "0.2.0"
description = "Python client for clomp — tamper-evident audit trail for security work"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lucas Skog" }]
keywords = ["audit-trail", "tamper-evident", "compliance", "soc2", "nis2", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/sockulags/clomp#readme"
Documentation = "https://sockulags.github.io/clomp/"
Repository = "https://github.com/sockulags/clomp"
Issues = "https://github.com/sockulags/clomp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clomp"]

[tool.hatch.build.targets.sdist]
include = ["src", "test", "README.md", "LICENSE"]
